# custom-prelude

./: Benchmark.hs  CorePrelude.hs  CustomPrelude.hs  LICENSE  README.md  custom-prelude.cabal  test-is-a-prelude.hs
