name:                custom-prelude
version:             0.1.0.0
synopsis:            An enhanced core prelude; a common foundation for alternate preludes.
description:         My own custom prelude, based off basic-prelude
homepage:            https://github.com/ajnsit/basic-prelude
license:             MIT
license-file:        LICENSE
author:              Anupam Jain, Michael Snoyman, Dan Burton
maintainer:          ajnsit@gmail.com

category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     BasicPrelude, CorePrelude, CustomPrelude
  build-depends:       base                     >= 4.5     && < 5
                     , hashable
                     , bytestring
                     , text
                     , transformers
                     , containers
                     , unordered-containers
                     , vector
                     , system-filepath          >= 0.4     && < 0.5

source-repository head
  type:     git
  location: git://github.com/ajnsit/basic-prelude.git
